<?php

require_once "Auteur.php";

class Livre{
    private string $isbn;
    private string $titre;
    private DateTime $dateParution;
    private int $nbPages;
    private Auteur $auteur;



}