@startuml
'https://plantuml.com/class-diagram

class Livre{

    private string isbn;
    private string titre;
    private DateTime dateParution;
    private int nbPages;

}

class Emprunt{
    private int idEmprunt
    private datetime dateEmprunt
}

class Utilisateur{
    private int idUser
    private string nomUser
    private string prenomUser

}

class Auteur{

    private int id;
    private string nomAuteur;
    private string prenomAuteur;

}

Livre "1..*"-->"1..1" Auteur : est écrit par >
Emprunt "0..*"--> "1..1" Utilisateur : est emprunté par
Emprunt "0..*"-->"1..1" Livre : est composé de >
@enduml